feat(java21): modernizacao completa com Sequenced Collections em todos os modulos
- Substituido uso de indexacao manual .get(0) por .getFirst() nos modulos asset, notification, report e appointment
- Validada conformidade com Java 21 e aprovada bateria de 129 testes automatizados